fix(review): [major] add {env}. prefix to all effect node contract topics
Normalize topic naming across all 6 effect node contracts to use
{env}. prefix, matching the convention established in the orchestrator
and pattern_learning_compute contracts. Also update metadata.updated
date in pattern_learning_compute contract.

--- a/src/omniintelligence/nodes/node_pattern_feedback_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_feedback_effect/contract.yaml
@@ -162,12 +162,12 @@ event_bus:
   event_bus_enabled: true
 
   subscribe_topics:
-    - "onex.cmd.omniintelligence.session-outcome.v1"
+    - "{env}.onex.cmd.omniintelligence.session-outcome.v1"
 
   publish_topics: []
 
   subscribe_topic_metadata:
-    "onex.cmd.omniintelligence.session-outcome.v1":
+    "{env}.onex.cmd.omniintelligence.session-outcome.v1":
       schema_ref: "omnibase_core.integrations.claude_code.ClaudeSessionOutcome"
       description: "Session outcome events from omniclaude SessionEnd hook"
 
