--- a/src/omniintelligence/nodes/node_pattern_lifecycle_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_lifecycle_effect/contract.yaml
@@ -177,18 +177,18 @@ event_bus:
   event_bus_enabled: true
 
   subscribe_topics:
-    - "onex.cmd.omniintelligence.pattern-lifecycle-transition.v1"
+    - "{env}.onex.cmd.omniintelligence.pattern-lifecycle-transition.v1"
 
   publish_topics:
-    - "onex.evt.omniintelligence.pattern-lifecycle-transitioned.v1"
+    - "{env}.onex.evt.omniintelligence.pattern-lifecycle-transitioned.v1"
 
   subscribe_topic_metadata:
-    "onex.cmd.omniintelligence.pattern-lifecycle-transition.v1":
+    "{env}.onex.cmd.omniintelligence.pattern-lifecycle-transition.v1":
       schema_ref: "omniintelligence.nodes.node_intelligence_reducer.models.ModelPayloadUpdatePatternStatus"
       description: "Pattern lifecycle transition intents from the reducer"
 
   publish_topic_metadata:
-    "onex.evt.omniintelligence.pattern-lifecycle-transitioned.v1":
+    "{env}.onex.evt.omniintelligence.pattern-lifecycle-transitioned.v1":
       schema_ref: "omniintelligence.nodes.node_pattern_lifecycle_effect.models.ModelPatternLifecycleTransitionedEvent"
       description: "Pattern lifecycle transition completed events for downstream consumers"
 
