fix(review): add idempotency sections to 4 effect node contracts
Add missing idempotency configuration to demotion, claude_hook,
feedback, and storage effect contracts for consistency with promotion
and lifecycle effect nodes. All use event_id_tracking strategy with
model-appropriate hash_fields.

--- a/src/omniintelligence/nodes/node_pattern_feedback_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_feedback_effect/contract.yaml
@@ -185,6 +185,17 @@ capabilities:
     description: "Record and track session success/failure outcomes"
 
 # =============================================================================
+# IDEMPOTENCY
+# =============================================================================
+idempotency:
+  enabled: true
+  strategy: "event_id_tracking"
+  hash_fields: ["session_id", "outcome"]
+  description: "Each session outcome event is uniquely identified by session_id and outcome. Re-processing
+    the same session outcome is idempotent - injections already marked as outcome_recorded are skipped,
+    preventing duplicate metric updates."
+
+# =============================================================================
 # METADATA
 # =============================================================================
 metadata:
