--- a/src/omniintelligence/nodes/node_pattern_demotion_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_demotion_effect/contract.yaml
@@ -301,6 +301,16 @@ capabilities:
     version: "1.0.0"
 
 # =============================================================================
+# IDEMPOTENCY
+# =============================================================================
+idempotency:
+  enabled: true
+  strategy: "event_id_tracking"
+  hash_fields: ["correlation_id", "dry_run"]
+  description: "Each demotion check request is keyed by correlation_id and dry_run flag. Re-processing
+    the same demotion request is idempotent - already-deprecated patterns are skipped during gate evaluation."
+
+# =============================================================================
 # HEALTH CHECK
 # =============================================================================
 health_check:
