feat: Wire all omnibase_core Python validators + fix violations (#103)
* feat: Wire all omnibase_core Python validators + fix violations across codebase

- Fix validate.py module path (cli → validator_cli) that caused 4 false failures
- Add 6 new validators: any-type, pydantic, naming-convention, enum-governance,
  enum-casing, literal-duplication
- Add run_standalone_validator() for non-CLI ValidatorBase subclasses
- Parse violation counts from output instead of relying on buggy exit codes
- Add custom validators: validate_clean_root.py, validate_naming.py
- Fix contract_linter glob pattern to match actual node layout

Validator fixes:
- Replace Any → object across ~40 files (129 violations → 0)
- Replace Union[bool,float,int,str] → PrimitiveValue from omnibase_core (6 files)
- Rename ServiceHandlerRegistry → RegistryDemotionHandlers/RegistryPromotionHandlers
- Convert RunResultLiteral → EnumRunResult enum
- Fix 2 contract YAML schemas (missing contract_version, wrong field name)
- Clean up root directory (.DS_Store)
- Delete stale docs, move migration docs to docs/migrations/

14 of 15 validators now pass. Remaining: architecture (42 file-splitting
violations tracked in OMN-2206).

* fix(review): [major+minor] Revert unsafe Any->object conversions where dynamic typing is required

Reverts Any->object in locations where object is too restrictive:
- handler_criteria_matching.py: subscript access and comparisons on heterogeneous data
- ProtocolPatternRepository: asyncpg Record values need Any for downstream arithmetic
- Downstream handlers: promotion, demotion, feedback, adapters aligned with protocol
- Legacy event publisher: Pydantic payload serialization and confluent-kafka callbacks
- Test factories: kwargs need Any for heterogeneous test data
- ProtocolIntentClassifier: protocol bridge for dynamically-typed interface

* fix(review): [major] Revert ProtocolComputeNode.compute() Any->object conversion

Callers access .success, .parsed_events, .primary_intent on th

--- a/src/omniintelligence/runtime/contracts/runtime_config.yaml
+++ b/src/omniintelligence/runtime/contracts/runtime_config.yaml
@@ -15,10 +15,11 @@
 # Configuration contracts are validated by the Pydantic model directly.
 
 name: intelligence_runtime_config
-version:
+contract_version:
   major: 1
   minor: 0
   patch: 0
+node_type: "RUNTIME_HOST_GENERIC"
 
 description: |
   Configuration contract for the OmniIntelligence runtime host.
@@ -60,6 +61,11 @@ environment_variables:
     - INTELLIGENCE_RUNTIME_METRICS_PORT
 
 # Default configuration values
+# Note: These defaults apply when loading from this YAML contract.
+# The Pydantic model (ModelEventBusConfig) has different defaults (enabled=False,
+# bootstrap_servers="") for code-level construction via from_environment().
+# This divergence is intentional: the YAML contract declares production intent
+# while the model defaults provide safe code-level fallbacks.
 defaults:
   runtime_name: "intelligence-runtime"
   log_level: "INFO"
