--- a/src/omniintelligence/nodes/node_pattern_feedback_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_feedback_effect/contract.yaml
@@ -162,12 +162,12 @@ event_bus:
   event_bus_enabled: true
 
   subscribe_topics:
-    - "onex.cmd.omniintelligence.session-outcome.v1"
+    - "{env}.onex.cmd.omniintelligence.session-outcome.v1"
 
   publish_topics: []
 
   subscribe_topic_metadata:
-    "onex.cmd.omniintelligence.session-outcome.v1":
+    "{env}.onex.cmd.omniintelligence.session-outcome.v1":
       schema_ref: "omnibase_core.integrations.claude_code.ClaudeSessionOutcome"
       description: "Session outcome events from omniclaude SessionEnd hook"
 
@@ -183,6 +183,17 @@ capabilities:
     description: "Recompute pattern effectiveness scores (quality_score) from rolling metrics"
   - name: "session_outcome"
     description: "Record and track session success/failure outcomes"
+
+# =============================================================================
+# IDEMPOTENCY
+# =============================================================================
+idempotency:
+  enabled: true
+  strategy: "event_id_tracking"
+  hash_fields: ["session_id", "outcome"]
+  description: "Each session outcome event is uniquely identified by session_id and outcome. Re-processing
+    the same session outcome is idempotent - injections already marked as outcome_recorded are skipped,
+    preventing duplicate metric updates."
 
 # =============================================================================
 # METADATA
